--- a/NUMAD24FA_XiaolinLiu/app/src/main/res/values/strings.xml
+++ b/NUMAD24FA_XiaolinLiu/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">My Application</string>
+    <string name="invalid_input">Invalid Input</string>
 </resources>
